# dict-deep

./: .gitignore  LICENSE  README.md  dev-requirements.txt  pyproject.toml
dict_deep/: __init__.py  dict_deep.py
tests/: test_dict_deep.py  test_simple.py
