[tool.poetry]
name = "dict-deep"
version = "4.1.2"
authors = ["mbello <mbello@users.noreply.github.com>"]
description = "Very simple deep_set and deep_get functions to access nested dicts (or any object) using 'dotted strings' as key."
license = "MIT"
readme = "README.md"
repository = "https://github.com/mbello/dict-deep"
homepage = "https://github.com/mbello/dict-deep"
keywords = ['dict dotted keys', 'deep dict access', 'nested dict access', 'deep_get', 'deep_set', 'deep_del']


[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = ">=5.4.1"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
